JSW Devsb/src/objects/Customer_Ledger__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Ledgers</relationshipLabel>
        <relationshipName>Customer_Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Doc_No__c</fullName>
        <label>Accounting Doc No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Rs__c</fullName>
        <label>Balance [Rs.]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Doc_No__c</fullName>
        <label>Billing Doc No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clrg_No__c</fullName>
        <label>Clrg No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Rs__c</fullName>
        <label>Credit [Rs.]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Rs__c</fullName>
        <label>Debit [Rs.]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <label>Doc Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excise_no__c</fullName>
        <label>Excise no</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Date_Time__c</fullName>
        <label>Interface Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Date__c</fullName>
        <formula>DATE
(
	YEAR(  Post_Date_Formula__c),
	Month( Post_Date_Formula__c),
	CASE( MONTH(Post_Date_Formula__c), 
		1, 31, 
		2, IF( MOD( YEAR(Post_Date_Formula__c), 4) = 0, 29, 28), 
		3, 31, 
		4, 30, 
		5, 31, 
		6, 30, 
		7, 31, 
		8, 31, 
		9, 30, 
		10, 31, 
		11, 30, 
		12, 31, 
		0 
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_of_Year__c</fullName>
        <label>Month of Year</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particulars__c</fullName>
        <label>Particulars</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Date_Formula__c</fullName>
        <formula>Post_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_MT__c</fullName>
        <label>Quantity (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_No__c</fullName>
        <label>Ref No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Emp_Name__c</fullName>
        <label>Sales Emp Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee_Code__c</fullName>
        <label>Sales Employee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_Code__c</fullName>
        <label>Sales Promoter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter_Name__c</fullName>
        <label>Sales Promoter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Promoter</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Customer Ledgers (Sales Promoter)</relationshipLabel>
        <relationshipName>Customer_Ledgers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Truck_No__c</fullName>
        <label>Truck No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Ledger</label>
    <listViews>
        <fullName>April</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Code__c</columns>
        <columns>Credit_Rs__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Debit_Rs__c</columns>
        <columns>Doc_Type__c</columns>
        <columns>Balance_Rs__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Particulars__c</columns>
        <columns>Month_of_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month_of_Year__c</field>
            <operation>equals</operation>
            <value>April</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Customer Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Ledgers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>